# voisinc

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.musl  init.sh  makefile
src/: audio.rs  commands.rs  main.rs  types.rs
