[package]
name = "voisinc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
futures = "0.3.30"
serenity-voice-model = "*"
thiserror = "1.0.58"
tracing = "0.1.40"


[dependencies.poise] 
version = "0.6.1"

[dependencies.serenity]
version = "0.12.0"

[dependencies.songbird]
version = "0.4.1"
features = ["receive"]

[dependencies.tokio]
version = "*"
features = ["full"]

[dependencies.tracing-subscriber]
version = "0.3.18"
features = ["json", "serde"]

[dependencies.dashmap]
version = "*"
features = ["inline"]